refactor doc to invisible char

--- a/h2o/assets/translations/en-US.json
+++ b/h2o/assets/translations/en-US.json
@@ -40,6 +40,10 @@
   "doc.block.bulletedList.hint": "Bulleted List",
   "channel.block.tooltip.select": "Select",
   "channel.block.tooltip.copy": "Copy",
+  "channel.block.tooltip.delete": "Delete",
+  "channel.block.tooltip.confirm_to_delete": "Confirm to delete",
+  "channel.block.tooltip.delete.confirm": "Delete",
+  "channel.block.tooltip.delete.cancel": "Cancel",
   "channel.block.tooltip.copy.toast": "Copied",
   "channel.block.selection.forward": "Forward",
   "channel.block.selection.cancel": "cancel",
