add table select

--- a/h2o/assets/translations/zh-CN.json
+++ b/h2o/assets/translations/zh-CN.json
@@ -1,4 +1,86 @@
 {
   "app.title": "H2O",
-  "team.add_node": "节点"
+  "team.add_node": "节点",
+  "team.add_node.title": "添加节点",
+  "team.add_node.cancel": "取消",
+  "team.add_node.confirm": "创建",
+  "team.add_node.name": "节点名称",
+  "team.add_node.type": "节点类型",
+  "team.add_node.type.directory": "目录",
+  "team.add_node.type.directory.description": "节点关系",
+  "team.add_node.type.channel": "频道",
+  "team.add_node.type.channel.description": "交换信息流",
+  "team.add_node.type.document": "文档",
+  "team.add_node.type.document.description": "沉淀重组知识",
+  "team.add_node.type.table": "实体",
+  "team.add_node.type.table.description": "结构化数据",
+  "team.add_node.indent": "缩进",
+  "team.add_node.indent.same": "不变",
+  "team.add_node.indent.same.description": "保持相同缩进",
+  "team.add_node.indent.increase": "增加",
+  "team.add_node.indent.increase.description": "缩进递增",
+  "table.add_column.title": "添加属性",
+  "table.add_column.cancel": "取消",
+  "table.add_column.confirm": "添加",
+  "table.add_column.button": "属性",
+  "table.add_column.name": "属性名称",
+  "table.add_column.type": "属性类型",
+  "table.add_column.type.string": "文本",
+  "table.add_column.type.string.description": "一行文本",
+  "table.add_column.type.integer": "整数",
+  "table.add_column.type.integer.description": "一个整数",
+  "table.add_column.type.number": "小数",
+  "table.add_column.type.number.description" : "一个小数",
+  "table.add_column.type.date": "日期",
+  "table.add_column.type.date.description": "一个日期",
+  "table.add_column.type.select": "选项",
+  "table.add_column.type.select.description": "自定义选项",
+  "table.add_column.type.multi_select": "多选",
+  "table.add_column.type.multi_select.description": "多个选项",
+  "table.add_column.type.created_time": "创建时间",
+  "table.add_column.type.created_time.description": "实例的创建时间",
+  "table.add_column.type.updated_time": "更新时间",
+  "table.add_column.type.updated_time.description": "实例的最近更新时间",
+  "table.add_column.default": "默认值",
+  "table.add_row.button": "实例",
+  "table.select.confirm": "完成",
+  "table.select.hint": "选择或新建选项",
+  "table.select.create": "新建",
+  "doc.block.text.hint": "文本",
+  "doc.block.heading1.hint": "一级标题",
+  "doc.block.heading2.hint": "二级标题",
+  "doc.block.heading3.hint": "三级标题",
+  "doc.block.bulletedList.hint": "无序列表",
+  "channel.block.tooltip.select": "多选",
+  "channel.block.tooltip.copy": "复制",
+  "channel.block.tooltip.delete": "删除",
+  "channel.block.tooltip.confirm_to_delete": "确认删除",
+  "channel.block.tooltip.delete.confirm": "删除",
+  "channel.block.tooltip.delete.cancel": "取消",
+  "channel.block.tooltip.copy.toast": "已复制",
+  "channel.block.selection.forward": "转发",
+  "channel.block.selection.cancel": "取消",
+  "channel.block.selection.forward_to_doc": "转发到文档",
+  "channel.block.selection.copy_to_doc": "复制到文档",
+  "channel.block.selection.move_to_doc": "移动到文档",
+  "channel.block.selection.combine_and_forward_to_channel": "合并转发到频道",
+  "channel.block.selection.separate_and_forward_to_channel": "分开转发到频道",
+  "channel.forward_to_doc.move_to": "移动到",
+  "channel.forward_to_doc.copy_to": "复制到",
+  "channel.forward_to_doc.cancel": "取消",
+  "channel.forward_to_doc.confirm": "确认",
+  "channel.forward_to_doc.select_doc": "选择一个文档",
+  "doc.add_chart.title": "插入图表",
+  "doc.add_chart.cancel": "取消",
+  "doc.add_chart.confirm": "插入",
+  "doc.add_chart.type": "图表类型",
+  "doc.add_chart.type.line": "折线图",
+  "doc.add_chart.type.line.description": "折线图",
+  "doc.add_chart.type.column": "柱状图",
+  "doc.add_chart.type.column.description": "柱状图，条形图",
+  "doc.add_chart.data_source": "数据源",
+  "doc.add_chart.select_data_source": "选择一个数据源",
+  "doc.add_chart.preview": "预览",
+  "doc.add_chart.horizontal_axis": "横坐标",
+  "doc.add_chart.vertical_axis": "纵坐标"
 }
