--- a/h2o/assets/translations/en-US.json
+++ b/h2o/assets/translations/en-US.json
@@ -4,8 +4,8 @@
   "team.add_node.title": "Create Node",
   "team.add_node.cancel": "Cancel",
   "team.add_node.confirm": "Create",
-  "team.add_node.name": "Node Name",
-  "team.add_node.type": "Node Type",
+  "team.add_node.name": "Name",
+  "team.add_node.type": "Type",
   "team.add_node.type.directory": "Directory",
   "team.add_node.type.directory.description": "Manage your nodes as files",
   "team.add_node.type.channel": "Channel",
@@ -23,16 +23,29 @@
   "table.add_column.cancel": "Cancel",
   "table.add_column.confirm": "Add",
   "table.add_column.button": "Column",
-  "table.add_column.name": "Column Name",
-  "table.add_column.type": "Column Type",
+  "table.add_column.name": "Name",
+  "table.add_column.type": "Type",
   "table.add_column.type.string": "Text",
-  "table.add_column.type.string.description": "Plain text string",
+  "table.add_column.type.string.description": "A Single Line of Text",
   "table.add_column.type.integer": "Integer",
-  "table.add_column.type.integer.description": "Integer Number",
+  "table.add_column.type.integer.description": "An integer number",
+  "table.add_column.type.number": "Number",
+  "table.add_column.type.number.description" : "A decimal number, floating point",
   "table.add_column.type.date": "Date",
-  "table.add_column.type.date.description": "Datetime",
+  "table.add_column.type.date.description": "A date",
+  "table.add_column.type.select": "Select",
+  "table.add_column.type.select.description": "Select from a list of custom options",
+  "table.add_column.type.multi_select": "Multi-Select",
+  "table.add_column.type.multi_select.description": "Select multiple options",
+  "table.add_column.type.created_time": "Created Time",
+  "table.add_column.type.created_time.description": "The date and time a instance is created",
+  "table.add_column.type.updated_time": "Updated Time",
+  "table.add_column.type.updated_time.description": "The date and time a instance is updated",
   "table.add_column.default": "Default",
   "table.add_row.button": "Row",
+  "table.select.confirm": "Done",
+  "table.select.hint": "Select or create an option",
+  "table.select.create": "Create",
   "doc.block.text.hint": "",
   "doc.block.heading1.hint": "Heading 1",
   "doc.block.heading2.hint": "Heading 2",
@@ -68,6 +81,6 @@
   "doc.add_chart.data_source": "Data Source",
   "doc.add_chart.select_data_source": "Select a data source",
   "doc.add_chart.preview": "Preview",
-  "doc.add_chart.horizontal_axis": "x",
-  "doc.add_chart.vertical_axis": "y"
+  "doc.add_chart.horizontal_axis": "Horizontal Axis",
+  "doc.add_chart.vertical_axis": "Vertical Axis"
 }
